Disabling language switcher because translation is out of date

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -60,7 +60,7 @@
               </a>
             </li>
             <li class="text-gray-500">
-              {% include language-switcher.html %}
+              {% comment %}{% include language-switcher.html %}{% endcomment %}
             </li>
           </ul>
         </nav>
