--- a/_includes/sections/success_story.html
+++ b/_includes/sections/success_story.html
@@ -5,7 +5,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Client 1 -->
             <div class="bg-gray-50 rounded-xl shadow p-6">
-            <a href="./cas/teletravail.guru">
+            <a href="./cases/teletravail.guru">
                 <h3 class="text-xl font-semibold text-purple-700 mb-2">💻 Télétravail.guru
                 <p class="text-sm font-normal text-purple-700 bg-purple-100 inline-block px-2 py-1 rounded-full mt-1 mb-2">
                     View case study
@@ -19,7 +19,7 @@
 
         <!-- Client 2 -->
         <div class="bg-gray-50 rounded-xl shadow p-6">
-            <a href="./cas/joezz.com">
+            <a href="./cases/joezz.com">
             <h3 class="text-xl font-semibold text-purple-700 mb-2">🚀 Joezz
                 <p class="text-sm font-normal text-purple-700 bg-purple-100 inline-block px-2 py-1 rounded-full mt-1 mb-2">
                 View case study
@@ -33,7 +33,7 @@
 
         <!-- Client 3 -->
         <div class="bg-gray-50 rounded-xl shadow p-6">
-            <a href="./cas/researca.com">
+            <a href="./cases/researca.com">
             <h3 class="text-xl font-semibold text-purple-700 mb-2">📰 Researca
                 <p class="text-sm font-normal text-purple-700 bg-purple-100 inline-block px-2 py-1 rounded-full mt-1 mb-2">
                 View case study
