--- a/_includes/sections/key_features.html
+++ b/_includes/sections/key_features.html
@@ -1,45 +1,45 @@
 <!-- Who is it for -->
 <section class="py-20 px-6 bg-gray-100 textured-section">
     <div class="max-w-4xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-6 text-purple-700">Designed for ambitious startups and SMEs</h2>
+    <h2 class="text-3xl font-bold mb-6 text-purple-700">Designed for ambitious Startups and SMBs</h2>
     <p class="text-lg text-gray-600 mb-8">
-        Our platform is designed for companies that want to leverage their data without hiring a dedicated team.
+        We bring you the best of the Modern Data Stack and we manage it for you.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-left">
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Data integration</h3>
-        <p>Connect your CRM, ERP, marketing tools, and internal databases. 300+ connectors available.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ 300+  connectors</h3>
+        <p>Easily collect data from your apps & database.</p>
         </div>
         </a>
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Reporting & automation</h3>
-        <p>Use your data in dashaboards, BI tools, MCP or send them to any API.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ AI powered dashboard & notebook</h3>
+        <p>Analyse your data directly in Telary.</p>
         </div>
         </a>
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Zero proprietary dependencies</h3>
-        <p>100% open source, no black boxes, you keep control.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ 100% Open Source</h3>
+        <p>Zero proprietary dependencies, you keep control.</p>
         </div>
         </a>
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Fully managed</h3>
-        <p>We take care of your data pipelines ourselves.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ API & Reverse ETL ready</h3>
+        <p>Easily connect Telary to other applications.</p>
         </div>
         </a>
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Hosting in France</h3>
-        <p>Your data is hosted in France and Europe, in compliance with GDPR.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ Fully managed services</h3>
+        <p>We look after your data, and host them wherever you want.</p>
         </div>
         </a>
         <a href="usecases">
         <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">✔️ Scale up to the terabyte scale</h3>
-        <p>We work together during all stage of growth of your company.</p>
+        <h3 class="text-xl font-semibold mb-2">✔️ Scalable platform</h3>
+        <p>Scale up to the terabyte scale and keep costs under control.</p>
         </div>
         </a>
     </div>
