--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ site.title }}</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/tailwindcss-cdn@3.4.10/tailwindcss.js"></script>
   <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}" type="image/png" />
   <link rel="stylesheet" href="{{ '/assets/css/patterns.css' | relative_url }}" />
 
